--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,52 @@
 {
-    "livePreview.defaultPreviewPath": "/index.html"
+    "livePreview.defaultPreviewPath": "/index.html",
+    
+    // UI and Display Settings
+    "workbench.colorTheme": "Default Dark+",
+    "workbench.iconTheme": "vs-seti",
+    "workbench.startupEditor": "welcomePage",
+    "workbench.sideBar.location": "left",
+    "workbench.panel.defaultLocation": "bottom",
+    "workbench.statusBar.visible": true,
+    "workbench.editor.showTabs": true,
+    "workbench.editor.tabSizing": "fit",
+    "workbench.tree.indent": 20,
+    
+    // Editor Display
+    "editor.fontSize": 14,
+    "editor.fontFamily": "'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace",
+    "editor.lineHeight": 1.5,
+    "editor.wordWrap": "on",
+    "editor.minimap.enabled": true,
+    "editor.lineNumbers": "on",
+    "editor.rulers": [80, 120],
+    "editor.renderWhitespace": "selection",
+    "editor.cursorStyle": "line",
+    "editor.cursorBlinking": "blink",
+    
+    // Terminal Settings
+    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontFamily": "'SF Mono', Monaco, 'Cascadia Code', monospace",
+    
+    // Explorer and File Settings
+    "explorer.compactFolders": false,
+    "explorer.confirmDelete": true,
+    "explorer.confirmDragAndDrop": true,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1000,
+    
+    // Git Integration
+    "git.enableSmartCommit": true,
+    "git.confirmSync": false,
+    "scm.diffDecorations": "all",
+    
+    // Web Development Specific
+    "html.format.indentInnerHtml": true,
+    "html.format.wrapLineLength": 120,
+    "css.validate": true,
+    "javascript.format.enable": true,
+    "emmet.includeLanguages": {
+        "html": "html",
+        "css": "css"
+    }
 }
