--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "workbench.sideBar.location": "left",
     "workbench.panel.defaultLocation": "bottom",
     "workbench.statusBar.visible": true,
-    "workbench.editor.showTabs": true,
+    "workbench.editor.showTabs": "multiple",
     "workbench.editor.tabSizing": "fit",
     "workbench.tree.indent": 20,
     
